fazendo um component de counter e adicionando o fast refresh no webpack

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,8 +1,10 @@
 *{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 body{
-    background-color: red;
+    font-family: "Helvetica Neue", Arial, sans-serif;
+    color: #121214;
 }
